##-*- Mode: Change-Log; coding: utf-8; -*-
##
## Change log for perl distribution DiaColloDB

v0.12.001 Tue, 24 Jan 2017 15:01:24 +0100 moocow
	* made profile parameter N dependent on epoch size (fixes mantis bug #17036)
	* adapted Profile::Multi::sumover() to heuristically guess whether to sum sub-profile N for diacollo <= v0.11 compatibility
	* reverse-order from DDC::PP Descendants() fixed in DDC::Concordance v0.33

v0.11.002 Wed, 30 Nov 2016 15:38:39 +0100 moocow
	* fixed bogus repsitory in Makefile.PL
	* fixed meta-attribute parsing "doc.ATTR", "doc.ATTR=VAL" for native query syntax
	* fixed buglet calling DDC::Any::Object::new() with temporary $1 argument (quote it to save it)
	* TODO: figure out why DDC::PP Descendants() returns in reverse order vs. DDC::XS::Descendants() (--> diacollo item tuple order)

v0.11.001 Tue, 20 Sep 2016 14:14:18 +0200 moocow
	* added DiaColloDB::Relation::extend() and wrappers DiaColloDB::extend(), DiaColloDB::Client::extend()
	  - high-level interface to independent f2 acquisition, e.g. for list-clients
	  - DDC-relation extend() support still experimental: large batch queries can cause server to choke
	* fixed Client::list incorrect f2 acquisition bug
	* added support for parallel sub-client processing in Client::list (requires 'forks' module)
	* added dcdb-create.perl -lazy option for "lazy union" list-client creation
	* renamed 'mi' score function to more accurate 'milf'
	* added 'mi1' score function (raw PMI)
	  - not too useful without pre-filtered corpus: too sensitive to low-frequency outliers

v0.10.009 Thu, 25 Aug 2016 09:51:34 +0200 moocow
	* updated Tie::File::Indexed dependency to v0.08
	* updated DDC::Concordance dependency to v0.28

v0.10.008 Wed, 24 Aug 2016 14:12:21 +0200 moocow
	* merged in debugging changes from v0.10.004 debugging branch (_v0.10.004_0[123])
	  - conditionally enabled by new dcdb-create.perl -debug option
	* added Utils::fh_flush() and Utils::fh_reopen() methods